<resources>
    <string name="app_name">AndroidTaxiApp2</string>
    <string name="register_text">Create your account/</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number (with +380)</string>
    <string name="continue_text">Continue</string>
    <string name="email_text">Email</string>
    <string name="sign_in_text">Sign in</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm password</string>
    <string name="register_redirect_text">Create new account</string>
    <string name="login_redirect_text">Already an user? Login</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="statement_hint">Please enter some of your personal information (Fullname, Physical location,Phone number, Email address)</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mapbox_access_token">sk.eyJ1IjoiY3VzdG9tZXJ5IiwiYSI6ImNsdTV0cWx6ZTFscDIybnMzZTF4MmRpZ3cifQ.ln8MPH27l0kVntMQFlzPwQ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
</resources>