<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_text"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/move"
                    android:textSize="22sp" />

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginRight="4dp"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginLeft="4dp"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/last_name"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_confirm_password_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password_text"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <Button
                android:layout_alignParentBottom="true"
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                style="@style/Widget.MaterialComponents.Button"
                app:cornerRadius="20dp"
                android:text = "@string/continue_text"/>

            <TextView
                android:id="@+id/login_redirect_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_redirect_text"
                android:layout_gravity="center"
                android:padding="3dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginVertical="20dp"
                />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>