<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    android:background="@android:color/darker_gray"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical|center_horizontal|center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/frontal_taxi_cab_svgrepo_com"
                    android:scaleType="fitXY">
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:textSize="50dp"
                    android:textColor="@color/black"
                    android:text="Taxi App"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginHorizontal="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_login_email_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:hint="@string/email_text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginHorizontal="20dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_login_password_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:hint="@string/password_text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_alignParentBottom="true"
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cornerRadius="20dp"
                    android:layout_marginHorizontal="20dp"
                    style="@style/Widget.MaterialComponents.Button"
                    android:text = "@string/sign_in_text"/>

                <TextView
                    android:id="@+id/register_redirect_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_redirect_text"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginVertical="20dp"
                    />



            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>